--- a/style.css
+++ b/style.css
@@ -22,7 +22,11 @@
     text-transform: none;
     transition:all .2s linear;
   }
-  
+  html, body {
+    overflow-x: hidden; /* Evita o estouro horizontal */
+    margin: 0;
+    padding: 0;
+  }
   html{
     font-size: 62.5%;
     overflow-x: hidden;
@@ -33,12 +37,15 @@
   header{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background: #792A39;
     padding: 1.5rem 7%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 100%;
+    position: relative;
     z-index: 100;
+ 
+  
   }
   .logo{
     width: 50px;
@@ -59,7 +66,19 @@
     50% {left: 25%;}
     100% {left: 20%;}
   }
+  .navbar-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 1.5rem;
+}
 
+.navbar {
+    display: flex;
+    align-items: center;
+}
   .navbar a{
     padding: 1rem;
     margin: 0.5rem;
@@ -71,16 +90,7 @@
   .navbar a:hover{
     color: var(--color8);
   }
-  .navbar a::after{
-    content: "";
-    background-color: var(--color8);
-    width: 0;
-    height: 2px;
-    left: 0;
-    top: 100%;
-    position: absolute;
-    transition: 0.5s;
-  }
+  
   .navbar a:hover::after{
     width: 100%;
   
@@ -407,7 +417,7 @@
   text-align: center;
 }
 .services-heading h1{
-  font-size: 45px;
+  font-size: 40px;
   color: var(--color4);
   padding-bottom: 3rem;
 }
@@ -656,45 +666,30 @@ cursor: pointer;
 .whatsapp-btn {
   position: fixed;
   bottom: 20px;
-  right: 24px;
+  right: 20px; /* Ajuste o valor para manter o botão dentro da tela */
   z-index: 99;
-  img{
-    max-width: 74px;
-    transition: transform 0.4s;
+}
+
+.whatsapp-btn img {
+  max-width: 74px;
+  transition: transform 0.4s;
+}
+
+.whatsapp-btn img:hover {
+  transform: scale(1.2);
+}
+
+/* Ajuste para dispositivos móveis */
+@media screen and (max-width: 768px) {
+  .whatsapp-btn {
+    right: 20px; /* Ajuste a distância da borda direita em dispositivos móveis */
   }
-  
-  img:hover{
-    transform: scale(1.2);
+
+  .whatsapp-btn img {
+    max-width: 74px; /* Reduza o tamanho do botão em dispositivos móveis, se necessário */
   }
 }
 
-.whatsapp-btn .tooltip-text{
-visibility: hidden;
-position: absolute;
-width: 120px;
-top: 8px;
-left: -144px;
-padding: 6px;
-border-radius: 8px;
-text-align: center;
-background-color: #000000;
-color:#ffffff;
-opacity: 0;
-transition: opacity 0.4s;
-}
-
-.whatsapp-btn:hover .tooltip-text{
-  visibility: visible;
-  opacity: 1;
-}
-
-@media screen and (max-width: 768px){
-  .whatsapp-btn{
-    img{
-      max-width: 64px;
-    }
-  }
-}
 
 
 
@@ -720,7 +715,9 @@ transition: opacity 0.4s;
     left: -100%;
     width: 100%;
     height: 100vh;
-    background: var(--color6)
+    background: var(--color6);
+    flex-direction: column;
+    align-items: center;
     
   }
   .navbar.active{
@@ -735,16 +732,15 @@ transition: opacity 0.4s;
   }
   .main-home{
     height: auto;
-    padding-top: 30%;
+    padding-top: 100%;
     }
 
     .home-icons-below{
       margin-top: 0;
       padding: 4rem 2rem;
     }
-    .home-icon-box{
-      padding: 2rem;
-    }
+  
+    
 
     /* Service section */
 
