--- a/style.css
+++ b/style.css
@@ -428,13 +428,12 @@
 }
 .main-inner-services{
   display: flex;
-  align-items: center;
   gap: 2rem;
-  flex-wrap: wrap;
+  white-space: nowrap;
 }
 .service-box{
-  flex: 1 1 300px;
-  padding: 3rem 2rem;
+  flex: 0 1 300px;
+  padding: 2rem 2rem;
   border: 2px solid var(--color6); 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
