--- a/style.css
+++ b/style.css
@@ -93,14 +93,21 @@
     width: 100%;
   
   }
-  .header-icons{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end
-   
-  }
+  .header-icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
   .header-icons a {
-    margin-left: 1rem;
+  margin: 0 1rem;
+  font-size: 2rem;
+  color: var(--color0);
+  transition: 0.5s;
+}
+
+.header-icons a:hover {
+  color: var(--color8);
 }
   .header-icons i{
     font-size: 2.5rem;
